# CRM

bd/: crm.db
bd/exel_to_sqlite_python/: data_crm.xlsx  exel_to_sql.py
project_source/: CMakeLists.txt  main.cpp
project_source/diolog_add_guest/: diolog_add_guest.cpp  diolog_add_guest.hpp
project_source/reg_widget/: reg_widget.cpp  reg_widget.hpp
project_source/start_widget/: start_widget.cpp  start_widget.hpp
